PSARC 2006/679 Fault Event Extension 6279682 fmadm -q rotate errlog hangs while fmd report an error into the log 6326650 fma needs more dcmds for getting errors from crash dumps 6372709 fltlog can grow without bound; needs to be managed by logadm 6400607 fmd dumped core in zfs-diagnosis 6464740 fmdump -v output should display FRU location (label) information separate from the FRU 6485057 mc-amd driver should provide access to HT routing tables 6493219 libtopo needs to allow re-enumeration according static .xml props 6495169 PCI topo enumerator should maintain a 'module' property 6496757 Incorrect initializer for topo_builtin.c:_topo_builtins[] 6496850 Need mdb support for libtopo 6498181 .po files inconsistencies wrt the event registry content 6498187 SCA1000 and SCA500 .po dictionary files are out of date 6498195 SMF dictionary .po files are inconsistent 6498201 ZFS dictionary .po files are out of date 6502660 eft fills in ASRU and FRU from libtopo when none are defined in a fault event specification 6502949 eft memory leak in platform_fault2ipath() 6506108 topo_fmri_nvl2str on mem scheme fails to lookup offset and physaddr 6506622 missing entry in PCIEX dict/po files

--- a/usr/src/cmd/fm/dicts/SUN4.po
+++ b/usr/src/cmd/fm/dicts/SUN4.po
@@ -1,13 +1,12 @@
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -41,7 +40,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-0Y.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-0Y.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-13
 # keys: fault.io.ebus
@@ -105,7 +104,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-4P.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-4P.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below."
 #
 # code: SUN4-8000-5A
 # keys: defect.io.fire.pciex.driver
@@ -121,7 +120,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-5A.impact"
 msgstr "Loss of services provided by the device instances associated with\nthis problem"
 msgid "SUN4-8000-5A.action"
-msgstr "Ensure latest driver and patch are installed.  Use fmdump -v -u &lt;EVENT_ID&gt; to identify the module/package, or contact Sun for support."
+msgstr "Ensure latest driver and patch are installed.  Use fmdump -v -u <EVENT_ID> to identify the module/package, or contact Sun for support."
 #
 # code: SUN4-8000-6S
 # keys: fault.io.datapath fault.io.fire.asic
@@ -153,7 +152,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-75.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-75.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-8E
 # keys: defect.io.fire.pci.driver defect.io.fire.pciex.driver
@@ -169,7 +168,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-8E.impact"
 msgstr "Loss of services provided by the device instances associated with this problem"
 msgid "SUN4-8000-8E.action"
-msgstr "Ensure latest driver and patch are installed.  Use fmdump -v -u &lt;EVENT_ID&gt; to identify the module/package, or contact Sun for support."
+msgstr "Ensure latest driver and patch are installed.  Use fmdump -v -u <EVENT_ID> to identify the module/package, or contact Sun for support."
 #
 # code: SUN4-8000-9J
 # keys: fault.io.fire.pci.device fault.io.fire.pciex.device
@@ -233,7 +232,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-D4.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-D4.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-ER
 # keys: fault.io.fire.asic fault.io.fire.pci.device
@@ -249,7 +248,7 @@ msgstr "This fault does not have an automated response agent and thus requires i
 msgid "SUN4-8000-ER.impact"
 msgstr "Loss of services provided by the device instances associated with this fault"
 msgid "SUN4-8000-ER.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.  \n\nIf this message occurs on a Sun Fire T2000 also refer to the NOTE\nat the end of the Details section below.\n"
 #
 # code: SUN4-8000-FC
 # keys: fault.io.fire.hbus
