--- a/usr/src/cmd/fm/dicts/SUN4U.po
+++ b/usr/src/cmd/fm/dicts/SUN4U.po
@@ -3714,13 +3714,13 @@ msgstr "Fault"
 msgid "SUN4U-8007-7S.severity"
 msgstr "Critical"
 msgid "SUN4U-8007-7S.description"
-msgstr "The number of errors associated with this CHIP has exceeded acceptable levels.\nRefer to %s for more information.\n  Refer to %s for more information."
+msgstr "The number of errors associated with this CHIP has exceeded acceptable levels.\nRefer to %s for more information.  Refer to %s for more information."
 msgid "SUN4U-8007-7S.response"
-msgstr "An attempt will be made to remove the affected CHIP from service.\n"
+msgstr "An attempt will be made to remove the affected CHIP from service."
 msgid "SUN4U-8007-7S.impact"
-msgstr "The system will not be functioning at the same performance level with the CHIP removal.\n"
+msgstr "The system will not be functioning at the same performance level with the CHIP removal."
 msgid "SUN4U-8007-7S.action"
-msgstr "Schedule a repair procedure to replace the affected CHIP.  Use fmdump -v -u\n to identify the smallest CPU/Strand ID of the affected CORE on this\nCHIP.\n"
+msgstr "Schedule a repair procedure to replace the affected CHIP.  Use fmdump -v -u <EVENT_ID>\nto identify the smallest CPU/Strand ID of the affected CORE on this\nCHIP."
 #
 # code: SUN4U-8007-8J
 # keys: fault.cpu.SPARC64-VI.core
@@ -3730,13 +3730,13 @@ msgstr "Fault"
 msgid "SUN4U-8007-8J.severity"
 msgstr "Critical"
 msgid "SUN4U-8007-8J.description"
-msgstr "The number of errors associated with this CHIP has exceeded acceptable levels.\nRefer to %s for more information.\n  Refer to %s for more information."
+msgstr "The number of errors associated with this CHIP has exceeded acceptable levels.\nRefer to %s for more information.  Refer to %s for more information."
 msgid "SUN4U-8007-8J.response"
-msgstr "An attempt will be made to remove the affected CORE from service.\n"
+msgstr "An attempt will be made to remove the affected CORE from service."
 msgid "SUN4U-8007-8J.impact"
-msgstr "The system will not be functioning at the same performance level with the CORE removal.\n"
+msgstr "The system will not be functioning at the same performance level with the CORE removal."
 msgid "SUN4U-8007-8J.action"
-msgstr "Schedule a repair procedure to replace the affected CORE.  Use fmdump -v -u\n to identify the smallest CPU/Strand ID of the affected CORE on this\nCORE.\n"
+msgstr "Schedule a repair procedure to replace the affected CORE.  Use fmdump -v -u <EVENT_ID>\nto identify the smallest CPU/Strand ID of the affected CORE on this\nCORE.\n"
 #
 # code: SUN4U-8007-9E
 # keys: fault.cpu.SPARC64-VI.strand
@@ -3746,13 +3746,13 @@ msgstr "Fault"
 msgid "SUN4U-8007-9E.severity"
 msgstr "Critical"
 msgid "SUN4U-8007-9E.description"
-msgstr "The number of errors associated with this STRAND has exceeded acceptable levels.\nRefer to %s for more information.\n  Refer to %s for more information."
+msgstr "The number of errors associated with this STRAND has exceeded acceptable levels.\nRefer to %s for more information.  Refer to %s for more information."
 msgid "SUN4U-8007-9E.response"
-msgstr "An attempt will be made to remove the affected STRAND from service.\n"
+msgstr "An attempt will be made to remove the affected STRAND from service."
 msgid "SUN4U-8007-9E.impact"
-msgstr "The system will not be functioning at the same performance level with the STRAND removal.\n"
+msgstr "The system will not be functioning at the same performance level with the STRAND removal."
 msgid "SUN4U-8007-9E.action"
-msgstr "Schedule a repair procedure to replace the affected STRAND.  Use fmdump -v -u\n to identify the smallest CPU/Strand ID of the affected CORE on this\nSTRAND.\n"
+msgstr "Schedule a repair procedure to replace the affected STRAND.  Use fmdump -v -u <EVENT_ID>\nto identify the smallest CPU/Strand ID of the affected CORE on this\nSTRAND.\n"
 #
 # code: SUN4U-8007-AX
 # keys: fault.io.pci.device-invreq fault.io.tomatillo
@@ -3768,4 +3768,4 @@ msgstr "One or more device instances may be disabled\n"
 msgid "SUN4U-8007-AX.impact"
 msgstr "Loss of services provided by the device instances associated with this fault\n"
 msgid "SUN4U-8007-AX.action"
-msgstr "Ensure that the latest drivers and patches are installed. If a plug-in card is involved check for badly-seated cards or bent pins.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u  to identify the devices or contact Sun for support.\n"
+msgstr "Ensure that the latest drivers and patches are installed. If a plug-in card is involved check for badly-seated cards or bent pins.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u <EVENT_ID> to identify the devices or contact Sun for support.\n"
