--- a/usr/src/cmd/fm/dicts/PCI.po
+++ b/usr/src/cmd/fm/dicts/PCI.po
@@ -152,7 +152,7 @@ msgstr "One or more device instances may be disabled\n"
 msgid "PCI-8000-7J.impact"
 msgstr "Possible loss of services provided by the device instances associated with this fault\n"
 msgid "PCI-8000-7J.action"
-msgstr "Schedule a repair procedure to replace the affected device.  Use fmdump -v -u  to identify the device or contact Sun for support.\n"
+msgstr "Schedule a repair procedure to replace the affected device.  Use fmdump -v -u <EVENT_ID> to identify the device or contact Sun for support.\n"
 #
 # code: PCI-8000-8S
 # keys: fault.io.pci.bus-linkerr fault.io.pci.device-interr
@@ -168,7 +168,7 @@ msgstr "One or more device instances may be disabled\n"
 msgid "PCI-8000-8S.impact"
 msgstr "Possible loss of services provided by the device instances associated with this fault\n"
 msgid "PCI-8000-8S.action"
-msgstr "If a plug-in card is involved check for badly-seated cards or bent pins. Otherwise schedule a repair procedure to replace the affected device.  Use fmdump -v -u  to identify the device and bus or contact Sun for support.\n"
+msgstr "If a plug-in card is involved check for badly-seated cards or bent pins. Otherwise schedule a repair procedure to replace the affected device.  Use fmdump -v -u <EVENT_ID> to identify the device and bus or contact Sun for support.\n"
 #
 # code: PCI-8000-95
 # keys: fault.io.pci.device-invreq fault.io.pci.device-noresp
@@ -184,7 +184,7 @@ msgstr "One or more device instances may be disabled\n"
 msgid "PCI-8000-95.impact"
 msgstr "Possible loss of services provided by the device instances associated with this fault\n"
 msgid "PCI-8000-95.action"
-msgstr "Ensure that the latest drivers and patches are installed. If a plug-in card is involved check for badly-seated cards or bent pins.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u  to identify the devices or contact Sun for support.\n"
+msgstr "Ensure that the latest drivers and patches are installed. If a plug-in card is involved check for badly-seated cards or bent pins.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u <EVENT_ID> to identify the devices or contact Sun for support.\n"
 #
 # code: PCI-8000-AP
 # keys: fault.io.pci.device-interr fault.io.pci.device-invreq
@@ -200,7 +200,7 @@ msgstr "One or more device instances may be disabled\n"
 msgid "PCI-8000-AP.impact"
 msgstr "Possible loss of services provided by the device instances associated with this fault\n"
 msgid "PCI-8000-AP.action"
-msgstr "Ensure that the latest drivers and patches are installed.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u  to identify the devices or contact Sun for support.\n"
+msgstr "Ensure that the latest drivers and patches are installed.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u <EVENT_ID> to identify the devices or contact Sun for support.\n"
 #
 # code: PCI-8000-CA
 # keys: fault.io.pci.device-noresp
@@ -210,10 +210,10 @@ msgstr "Fault"
 msgid "PCI-8000-CA.severity"
 msgstr "Critical"
 msgid "PCI-8000-CA.description"
-msgstr "Device is failing to respond\n  Refer to %s for more information."
+msgstr "A device is failing to respond\n  Refer to %s for more information."
 msgid "PCI-8000-CA.response"
 msgstr "One or more device instances may be disabled\n"
 msgid "PCI-8000-CA.impact"
 msgstr "Possible loss of services provided by the device instances associated with this fault\n"
 msgid "PCI-8000-CA.action"
-msgstr "Schedule a repair procedure to replace the affected device.  Use fmdump -v -u  to identify the device or contact Sun for support.\n"
+msgstr "Schedule a repair procedure to replace the affected device.\n\nUse fmdump -v -u <EVENT_ID> to identify the device or contact Sun for support.\n"
